<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="#795548">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginRight="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/action_settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_menu_black_24dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/opciones" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/action_map"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_map_black_24dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/mapa" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/logo"
                android:baselineAlignBottom="true"
                android:clickable="false"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/action_plan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/notepad30"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/planes" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/action_challenge"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/challenge"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/retos" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.Toolbar>