<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="solfamidas.weplan.LoginActivity"
    android:weightSum="1"
    android:background="#795548">

    <!-- Login progress -->

    <ProgressBar android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="177dp"
        android:layout_height="177dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="648dp"
        android:layout_weight="1"
        android:layout_gravity="top">

        <LinearLayout android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:background="#4E342E"
            style="@style/caja_login">

            <EditText android:id="@+id/email"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_user"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:allowUndo="true"
                style="@style/login"
                />

            <EditText android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="12dp"
                style="@style/login" />

            <EditText android:id="@+id/password2"
                android:hint="Repeat Password:"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="12dp"
                style="@style/login" />

            <EditText android:id="@+id/correo"
                android:hint="@string/prompt_email"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="12dp"
                style="@style/login"/>

            <Button android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#616161"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/action_sign_in"
                android:id="@+id/textView9"
                android:textColor="#FFF"
                android:layout_gravity="right" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
